--- a/css/jquery.cardtips.scss
+++ b/css/jquery.cardtips.scss
@@ -1,10 +1,12 @@
+$cardtips-bg: #eee;
+
 .cardtips-wrapper {
   padding: 0.5em 0;
   position: absolute;
   z-index: 999;
 
   .cardtips-content {
-    background: white;
+    background: $cardtips-bg;
     border-radius: 3px;
     box-shadow: 1px 1px 2px 0 #CCCCCC;
     height: auto;
@@ -25,7 +27,7 @@
     right: auto !important;
 
     &.north .cardtips-content:before {
-      border-top: 1em solid white !important;
+      border-top: 1em solid $cardtips-bg !important;
       border-right: 1em solid transparent;
       border-left: 1em solid transparent;
 
@@ -33,7 +35,7 @@
     }
     &.south .cardtips-content:before {
       border-right: 1em solid transparent;
-      border-bottom: 1em solid white !important;
+      border-bottom: 1em solid $cardtips-bg !important;
       border-left: 1em solid transparent;
 
       border-top: 0 !important;
@@ -57,7 +59,7 @@
   }
 
   &.east .cardtips-content:before {
-    border-left: 1em solid white;
+    border-left: 1em solid $cardtips-bg;
     left: 0;
 
     border-right: none !important;
@@ -65,7 +67,7 @@
   }
 
   &.west .cardtips-content:before {
-    border-right: 1em solid white;
+    border-right: 1em solid $cardtips-bg;
     right: 0;
 
     border-left: none !important;
